fix(multiselect): move icon into flow to avoid text overflow

--- a/addon/styles/_pix-multi-select.scss
+++ b/addon/styles/_pix-multi-select.scss
@@ -17,7 +17,9 @@
 
   position: relative;
   display: flex;
+  gap: var(--pix-spacing-1x);
   align-items: center;
+  justify-content: space-between;
   width: 100%;
   padding: var(--pix-spacing-2x) var(--pix-spacing-3x);
   color: var(--pix-neutral-900);
@@ -56,9 +58,6 @@
   &__dropdown-icon {
     @extend %pix-body-s;
 
-    position: absolute;
-    top: calc(50% - 6px);
-    right: 10px;
     color: var(--pix-neutral-900);
     pointer-events: none;
   }
